// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the Animation Component correctly 1`] = `null`;

exports[`renders the Animation Component correctly 2`] = `
<div
  className="testClass1 sc-bdVaJa hxOzgB"
>
  <div>
    test
  </div>
</div>
`;

exports[`renders the Animation Component correctly 3`] = `
<div
  className="testClass2 sc-bdVaJa iBvyVz"
>
  <div>
    test
  </div>
</div>
`;
